--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
-/* Reset all the default stylings */
-*,
-*:before,
-*:after {
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  min-height: 100px;
 }
 
 header {
-  border: 0.2em solid gray;
+  height: 100px;
   display: flex;
   padding: 1em;
   justify-content: flex-start;
+  align-items: center;
+  margin: 2em 4em 2em;
 }
 
 p a {
-  font-family: "Inconsolata";
+  font-family: "inconsolata";
   font-size: 24px;
   font-weight: 700;
   line-height: 25px;
@@ -42,5 +44,70 @@ a:hover {
 
 /* selected link */
 a:active {
-  color: blue;
+  color: #6353be;
+}
+
+main {
+  display: flex;
+  height: calc(100vh - 100px);
+  align-items: center;
+  justify-content: center;
+  padding: 0 2em;
+}
+
+.hero-img {
+  max-width: 670px;
+}
+
+.right-side {
+  width: 30%;
+}
+
+main h1 {
+  font-family: "space mono";
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 95px;
+  letter-spacing: -0.035em;
+  text-align: left;
+  color: #333333;
+}
+
+main p {
+  font-family: "space mono";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  letter-spacing: -0.035em;
+  color: #4f4f4f;
+  margin: 64px 0;
+}
+
+.back-button {
+  padding: 15px 30px;
+  background: #333333;
+  font-family: "space mono";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: -0.035em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  font-family: "montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  color: #bdbdbd;
+  margin: 2em 4em 2em;
 }
